--- a/Resources/Beintoo-Info.plist
+++ b/Resources/Beintoo-Info.plist
@@ -12,9 +12,9 @@
 	<string>icon.png</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>57x57.png</string>
 		<string>icon.png</string>
 		<string>icon@2x.png</string>
+		<string>icon-iPad.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -22,9 +22,9 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>57x57.png</string>
 				<string>icon.png</string>
 				<string>icon@2x.png</string>
+				<string>icon-iPad.png</string>
 			</array>
 		</dict>
 	</dict>
@@ -43,10 +43,10 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb152837841401121</string>
-			</array>
+			<array/>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
